--- a/Domenici/ex1_8 GUI/build.xml
+++ b/Domenici/ex1_8 GUI/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Lezione21_01_2022" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Lezione21_01_2022.</description>
+<project name="ex1_8_GUI" default="default" basedir=".">
+    <description>Builds, tests, and runs the project ex1_8 GUI.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Lezione21_01_2022-impl.jar">
+        <target name="run" depends="ex1_8_GUI-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
