--- a/Domenici/ex1_8 GUI/nbproject/project.properties
+++ b/Domenici/ex1_8 GUI/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ex1_8 GUI
+application.vendor=tss
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,10 +29,11 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Lezione21_01_2022.jar
+dist.jar=${dist.dir}/ex1_8_GUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Lezione21_01_2022
+dist.jlink.output=${dist.jlink.dir}/ex1_8_GUI
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Lezione21_01_2022
-main.class=it.tts.lezione21_01_2022.Lezione21_01_2022
+jlink.launcher.name=ex1_8_GUI
+main.class=IT.TSS_EX_1_8_GUI.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
