--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /Domenici/ex1_8 GUI/build/
 /Domenici/Ex1_8_JS/nbproject/private/
 /GUERRINI/metodiOverload/target/
+/domenici/Ex_collection/nbproject/private/
+/domenici/ArrayMultidimensionali/nbproject/private/
+/domenici/00_Dado/nbproject/private/
