sweet dream are made of this

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /domenici/Ex_collection/nbproject/private/
 /domenici/ArrayMultidimensionali/nbproject/private/
 /domenici/00_Dado/nbproject/private/
+/guerrini/GestScuola/target/
