--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /domenici/ArrayMultidimensionali/nbproject/private/
 /domenici/00_Dado/nbproject/private/
 /guerrini/GestScuola/target/
+/Domenici/00_Dado/nbproject/private/
+/Domenici/Ex_collection/nbproject/private/
+/Domenici/00_Dado/build/
