--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Domenici/00_Dado/nbproject/private/
 /Domenici/Ex_collection/nbproject/private/
 /Domenici/00_Dado/build/
+/Guerrini/GestScuola/target/
+/Guerrini/metodiOverload/target/
