--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /Guerrini/metodiOverload/target/
 /GestioneScuola/target/
 /corso/Domenici/OO_BJ/nbproject/private/
+/corso/Domenici/OO_BJ/build/
+/corso/Domenici/OO_ConcettiBase/nbproject/private/
+/corso/Domenici/OO_ConcettiBase/build/
+/corso/Domenici/OO_interfacce/nbproject/private/
