--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 /corso/Guerrini/EsercizioEsame/target/
 /corso/Guerrini/EsercizioEsame/nbproject/
 /corso/Guerrini/EsercizioEsame/build/
+/corso/Domenici/ExRoom/nbproject/private/
+/corso/Domenici/ExRoom/build/
+/corso/Domenici/Ex Room/nbproject/private/
+/corso/Domenici/Ex Room/build/
+/corso/Domenici/Biblioteca/nbproject/private/
