--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 /corso/Domenici/Ex Room/nbproject/private/
 /corso/Domenici/Ex Room/build/
 /corso/Domenici/Biblioteca/nbproject/private/
+/corso/Domenici/exSafeSet/nbproject/private/
+/corso/Domenici/exSafeSet/build/
+/corso/Domenici/AgendaAppuntamenti/nbproject/private/
+/corso/Domenici/AgendaAppuntamenti/build/
