--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /corso/Domenici/exSafeSet/build/
 /corso/Domenici/AgendaAppuntamenti/nbproject/private/
 /corso/Domenici/AgendaAppuntamenti/build/
+/corso/Domenici/Negozio/nbproject/private/
+/corso/Domenici/Negozio/build/
