--- a/corso/Domenici/com.mycompany_Jdbc_jar_1.0-SNAPSHOT/pom.xml
+++ b/corso/Domenici/com.mycompany_Jdbc_jar_1.0-SNAPSHOT/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.4.0.Final</version>
         </dependency>
+        <dependency>
+    <groupId>org.mariadb.jdbc</groupId>
+    <artifactId>mariadb-java-client</artifactId>
+    <version>2.7.3</version>
+</dependency>
+
         </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
