--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /corso/Domenici/AgendaAppuntamenti/build/
 /corso/Domenici/Negozio/nbproject/private/
 /corso/Domenici/Negozio/build/
+/corso/Domenici/Jpa/target/
