--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /corso/Domenici/Negozio/nbproject/private/
 /corso/Domenici/Negozio/build/
 /corso/Domenici/Jpa/target/
+/corso/Domenici/jee-start/target/
