--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /corso/Domenici/Negozio/build/
 /corso/Domenici/Jpa/target/
 /corso/Domenici/jee-start/target/
+/corso/Domenici/BlogApp/BlogApp/target/
+/corso/Domenici/blogapp/blogapp/target/
