--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /corso/Domenici/jee-start/target/
 /corso/Domenici/BlogApp/BlogApp/target/
 /corso/Domenici/blogapp/blogapp/target/
+/corso/Domenici/blogapp/blogapp/nbproject/
+/corso/Domenici/blogapp/blogapp-st/target/
