--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@
 /corso/Domenici/blogapp/blogapp/target/
 /corso/Domenici/blogapp/blogapp/nbproject/
 /corso/Domenici/blogapp/blogapp-st/target/
+/corso/Guerrini/html/HTML5Application/nbproject/private/
+/corso/Guerrini/html/img/nbproject/private/
+/corso/Guerrini/html/HTML5Application1/nbproject/private/
