--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 /corso/Guerrini/html/HTML5Application/nbproject/private/
 /corso/Guerrini/html/img/nbproject/private/
 /corso/Guerrini/html/HTML5Application1/nbproject/private/
+/corso/Guerrini/html/welcomedog/nbproject/private/
