--- a/corso/Guerrini/html/welcomedog/package.json
+++ b/corso/Guerrini/html/welcomedog/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "HTML5Application1",
+    "name": "welcomedog",
     "version": "1.0.0",
     "keywords": ["util", "functional", "server", "client", "browser"],
     "author": "tss",
