--- a/corso/Domenici/blogapp/blogapp/Dockerfile
+++ b/corso/Domenici/blogapp/blogapp/Dockerfile
@@ -1,2 +1,2 @@
-FROM airhacks/glassfish
-COPY ./target/blogapp.war ${DEPLOYMENT_DIR}
+FROM quay.io/wildfly/wildfly:23.0.2.Final 
+COPY ./target/blogapp.war /opt/jboss/wildfly/standalone/deployments/
