--- a/corso/Domenici/blogapp/blogapp/pom.xml
+++ b/corso/Domenici/blogapp/blogapp/pom.xml
@@ -18,6 +18,11 @@
             <scope>provided</scope>
         </dependency> 
         <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>x.y.z</version>
+</dependency>
+        <dependency>
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
             <version>3.3</version>
@@ -42,6 +47,12 @@
             <version>8.16</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>11.0.0</version>
+        </dependency>
+        
         <!-- dipendenze per i test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -60,6 +71,11 @@
             <artifactId>jakarta.el</artifactId>
             <version>3.0.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.airhacks</groupId>
+            <artifactId>jaxrs-cors</artifactId>
+            <version>0.0.2</version>
         </dependency>
     </dependencies>
     <build>
